--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "swiper": "^11.1.14",
     "vee-validate": "^4.14.7",
     "vue": "^3.5.12",
+    "vue-clipboard3": "^2.0.0",
+    "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.4.5",
     "vue-sweetalert2": "^5.0.11",
     "vue-toastification": "2.0.0-rc.5",
